hw1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-flask-app
  template:
    metadata:
      labels:
        app: python-flask-app
    spec:
      containers:
      - name: app
        image: python-flask-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: logs-volume
          mountPath: /app/logs
      volumes:
        - name: logs-volume
          hostPath:
            path: /var/log/app-logs
            type: DirectoryOrCreate
